--- a/package.json
+++ b/package.json
@@ -4,8 +4,19 @@
   "description": "My own personal website.",
   "main": "index.js",
   "scripts": {
+    "start": "watchify -o js/bundle.js -t [ babelify --presets [ es2015 ] ] -v -d src/js/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Matt Thomson<red.cataclysm@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
+    "gulp": "^3.9.1",
+    "gulp-jade": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "marked": "^0.3.5",
+    "watchify": "^3.7.0"
+  }
 }
