--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
+    "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-jade": "^1.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.2.0",
+    "gulp-tap": "^0.1.3",
+    "lazypipe": "^1.0.1",
     "marked": "^0.3.5",
     "watchify": "^3.7.0"
   }
