--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "del": "^2.2.0",
-    "gulp": "^3.9.1",
+    "gulp": "gulpjs/gulp#4.0",
+    "gulp-filelist": "^0.4.0",
     "gulp-jade": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
