--- a/package.json
+++ b/package.json
@@ -2,26 +2,10 @@
   "name": "personal-website",
   "version": "0.0.0",
   "description": "My own personal website.",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
-    "start": "watchify -o js/bundle.js -t [ babelify --presets [ es2015 ] ] -v -d src/js/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Matt Thomson<red.cataclysm@gmail.com>",
-  "license": "MIT",
-  "devDependencies": {
-    "babel-preset-es2015": "^6.6.0",
-    "babelify": "^7.2.0",
-    "browserify": "^13.0.0",
-    "del": "^2.2.0",
-    "gulp": "gulpjs/gulp#4.0",
-    "gulp-filelist": "^0.4.0",
-    "gulp-jade": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.2.0",
-    "gulp-tap": "^0.1.3",
-    "lazypipe": "^1.0.1",
-    "marked": "^0.3.5",
-    "watchify": "^3.7.0"
-  }
+  "author": "Matt Thomson <red.cataclysm@gmail.com>",
+  "license": "MIT"
 }
